# win-mcp

./: .gitignore  Cargo.toml  LICENSE  POST-reddit.md  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
src/: lib.rs  main.rs  types.rs
src/tools/: cpu.rs  memory.rs  mod.rs  processes.rs
