[package]
name = "win-mcp"
version = "0.1.0"
edition = "2021"
description = "Windows hardware monitoring MCP server for AI agents"
license = "MIT"
repository = "https://github.com/666-Moonlight/win-mcp"
keywords = ["mcp", "windows", "hardware", "monitoring", "ai"]
categories = ["system-monitoring"]

[[bin]]
name = "win-mcp"
path = "src/main.rs"

[dependencies]
mcp-server = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
windows = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
