[package]
name = "win-mcp"
version = "0.1.0"
edition = "2021"
description = "Windows hardware monitoring MCP server"
license = "MIT"

[[bin]]
name = "win-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.4.0", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
